apps/base/headlamp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/part-of: dashboard
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
